# slovenia-weather-forecast-inteligent-system

./: .gitignore  IPT_2_semester_IIS_projekt.postman_collection.json  README.md  docker-compose.yml
forecast-model-trainer/: .gitignore  data.dvc  pyproject.toml
forecast-model-trainer/.dvc/: config
forecast-model-trainer/data_processor/: city_constants.py  fetch_city_data.py  process_city_data.py  split_city_data.py
forecast-model-trainer/data_quality/: check_city_quality.py
forecast-model-trainer/great_expectations/: great_expectations.yml
forecast-model-trainer/great_expectations/expectations/: .ge_store_backend_id  city_celje_suite.json
forecast-model-trainer/model_trainer/: train_model.py
forecast-model-trainer/notebooks/: train_model.ipynb
forecast-model-trainer/reports/data_reports/Celje/: index.html
forecast-model-trainer/reports/data_reports/Koper/: index.html
forecast-model-trainer/reports/data_reports/Kranj/: index.html
forecast-model-trainer/reports/data_reports/Ljubljana/: index.html
forecast-model-trainer/reports/data_reports/Maribor/: index.html
forecast-model-trainer/reports/data_reports/Murska_Sobota/: index.html
forecast-model-trainer/reports/data_reports/Novo_Mesto/: index.html
forecast-model-trainer/reports/data_reports/Ptuj/: index.html
forecast-model-trainer/reports/data_stability/Celje/: index.html
forecast-model-trainer/reports/data_stability/Koper/: index.html
forecast-model-trainer/reports/data_stability/Kranj/: index.html
forecast-model-trainer/utils/: mognodb_connector.py
swfis-backend-api/: Dockerfile  (+1 more)
(+28 files in other folders)
